fix reported stream usage issues